crates/icydb-core/tests/ui/db/value_is_runtime_only_not_structured_codec.stderr
error[E0277]: the trait bound `icydb_core::value::Value: PersistedStructuralValueCodec` is not satisfied
 --> tests/ui/db/value_is_runtime_only_not_structured_codec.rs:6:31
  |
6 |     assert_structured_codec::<Value>();
  |                               ^^^^^ the trait `PersistedStructuralValueCodec` is not implemented for `icydb_core::value::Value`
  |
  = help: the following other types implement trait `PersistedStructuralValueCodec`:
            BTreeMap<K, V>
            BTreeSet<T>
            Box<T>
            Option<T>
            Vec<T>
            bool
            i128
            i16
          and $N others
note: required by a bound in `assert_structured_codec`
 --> tests/ui/db/value_is_runtime_only_not_structured_codec.rs:3:31
  |
3 | fn assert_structured_codec<T: PersistedStructuralValueCodec>() {}
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_structured_codec`
