crates/icydb-core/tests/ui/db/value_is_runtime_only_not_structured_codec.rs
use icydb_core::{db::PersistedStructuralValueCodec, value::Value};

fn assert_structured_codec<T: PersistedStructuralValueCodec>() {}

fn main() {
    assert_structured_codec::<Value>();
}
